--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
+    "@react-three/drei": "^9.97.4",
+    "@react-three/fiber": "^8.15.16",
+    "framer-motion": "^11.0.3",
+    "next": "14.1.0",
     "react": "18",
     "react-dom": "18",
-    "next": "14.1.0"
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "10.0.1",
-    "postcss": "8",
-    "tailwindcss": "3.3.0",
     "eslint": "8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "8",
+    "tailwindcss": "3.3.0"
   }
 }
