--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.1.0",
     "react": "18",
     "react-dom": "18",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "three": "^0.161.0"
   },
   "devDependencies": {
     "autoprefixer": "10.0.1",
