--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.1.0",
     "react": "18",
     "react-dom": "18",
+    "react-snowfall": "^2.3.0",
     "react-type-animation": "^3.2.0",
     "three": "^0.161.0"
   },
